# aiida-autocas

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
aiida_autocas/: __init__.py  calculations.py  parsers.py
examples/: n2.py
